--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@100&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./source/components/main.css">
+    <title>Loopstudios</title>
 </head>
 <body>
-    
+    <div class="wrapper">
+        <header>
+
+        </header>
+        <main></main>
+        <footer></footer>
+    </div>
 </body>
 </html>
