feat: add layout header

--- a/index.html
+++ b/index.html
@@ -10,8 +10,18 @@
 </head>
 <body>
     <div class="wrapper">
-        <header>
-
+        <header class="header">
+            <nav class="header__nav">
+                <a class="header__logo" href="#"></a>
+                <ul class="header__list">
+                    <li class="header__item"><a class="header__link" href="#">About</a></li>
+                    <li class="header__item"><a class="header__link" href="#">Careers</a></li>
+                    <li class="header__item"><a class="header__link" href="#">Events</a></li>
+                    <li class="header__item"><a class="header__link" href="#">Products</a></li>
+                    <li class="header__item"><a class="header__link" href="#">Support</a></li>
+                </ul>
+            </nav>
+            <p class="header__slogan">Immersive experiences that deliver</p>
         </header>
         <main></main>
         <footer></footer>
