refactor: add a background in the header for better readability

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
             <p class="header__slogan">Immersive experiences that deliver</p>
         </header>
         <main></main>
-        <footer></footer>
+        <footer>
+            
+        </footer>
     </div>
 </body>
 </html>
