feat: add layout header

--- a/index.html
+++ b/index.html
@@ -24,8 +24,26 @@
             <p class="header__slogan">Immersive experiences that deliver</p>
         </header>
         <main></main>
-        <footer>
-            
+        <footer class="footer">
+            <nav class="footer__left-content">
+                <a class="footer__logo" href="#"></a>
+                <ul class="footer__list">
+                    <li class="footer__item"><a class="footer__link" href="#">About</a></li>
+                    <li class="footer__item"><a class="footer__link" href="#">Careers</a></li>
+                    <li class="footer__item"><a class="footer__link" href="#">Events</a></li>
+                    <li class="footer__item"><a class="footer__link" href="#">Products</a></li>
+                    <li class="footer__item"><a class="footer__link" href="#">Support</a></li>
+                </ul>
+            </nav>
+            <div class="footer__right-content">
+                <ul class="footer__socials">
+                    <li class="footer__socials-item"><a class="footer__socials-link" href="#"></a></li>
+                    <li class="footer__socials-item"><a class="footer__socials-link" href="#"></a></li>
+                    <li class="footer__socials-item"><a class="footer__socials-link" href="#"></a></li>
+                    <li class="footer__socials-item"><a class="footer__socials-link" href="#"></a></li>
+                </ul>
+                <p class="footer__copyright">&copy; 2021 Loopstudios. All rights reserved.</p>
+            </div>
         </footer>
     </div>
 </body>
