--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./source/components/main.css">
     <title>Loopstudios</title>
 </head>
@@ -23,7 +23,15 @@
             </nav>
             <p class="header__slogan">Immersive experiences that deliver</p>
         </header>
-        <main></main>
+        <main class="main">
+            <div class="main-intro">
+                <div class="main-intro__img"></div>
+                <div class="main-intro__content">
+                    <p class="main-intro__title">The leader in interactive VR</p>
+                    <p class="main-intro__text">Founded in 2011, Loopstudios has been producing world-class virtual reality projects for some of the best companies around the globe. Our award-winning creations have transformed businesses through digital experiences that bind to their brand.</p>
+                </div>
+            </div>
+        </main>
         <footer class="footer">
             <nav class="footer__left-content">
                 <a class="footer__logo" href="#"></a>
