feat: add pictures main section

--- a/index.html
+++ b/index.html
@@ -31,6 +31,20 @@
                     <p class="main-intro__text">Founded in 2011, Loopstudios has been producing world-class virtual reality projects for some of the best companies around the globe. Our award-winning creations have transformed businesses through digital experiences that bind to their brand.</p>
                 </div>
             </div>
+            <div class="main-box--head">
+                <p class="main__title">OUR CREATIONS</p>
+                <button class="main__btn">SEE ALL</button>
+            </div>
+            <ul class="main__list">
+                <li class="main__item">DEEP EARTH</li>
+                <li class="main__item">NIGHT ARCADE</li>
+                <li class="main__item">SOCCER TEAM VR</li>
+                <li class="main__item">THE GRID</li>
+                <li class="main__item">FROM UP ABOVE VR</li>
+                <li class="main__item">POCKET BOREALIS</li>
+                <li class="main__item">THE CURIOSITY</li>
+                <li class="main__item">MAKE IT FISHEYE</li>
+            </ul>
         </main>
         <footer class="footer">
             <nav class="footer__left-content">
