feat: add button menu

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <body>
     <div class="wrapper">
         <div class="mobile-menu">
-            <a class="mobile-menu__logo" href="#"></a>
+            <div class="mobile-menu__head">
+                <a class="mobile-menu__logo" href="#"></a>
+                <button class="mobile-menu__btn"></button>
+            </div>
             <ul class="mobile-menu__list">
                 <li class="mobile-menu__item"><a class="mobile-menu__link" href="#">About</a></li>
                 <li class="mobile-menu__item"><a class="mobile-menu__link" href="#">Careers</a></li>
