refactor: change structure of the project

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="mobile-menu">
-            <div class="mobile-menu__head">
+        <div class="burger-menu">
+            <div class="nav">
                 <a class="mobile-menu__logo" href="#"></a>
-                <button class="mobile-menu__btn"></button>
+                <button class="bmbtn"></button>
             </div>
-            <ul class="mobile-menu__list">
+            <ul class="nav__items">
                 <li class="mobile-menu__item"><a class="mobile-menu__link" href="#">About</a></li>
                 <li class="mobile-menu__item"><a class="mobile-menu__link" href="#">Careers</a></li>
                 <li class="mobile-menu__item"><a class="mobile-menu__link" href="#">Events</a></li>
