refactor: rename vars for better readability

--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
                 <button class="main__btn">SEE ALL</button>
             </div>
             <ul class="main__list">
-                <li class="main__item">DEEP EARTH</li>
-                <li class="main__item">NIGHT ARCADE</li>
-                <li class="main__item">SOCCER TEAM VR</li>
-                <li class="main__item">THE GRID</li>
-                <li class="main__item">FROM UP ABOVE VR</li>
-                <li class="main__item">POCKET BOREALIS</li>
-                <li class="main__item">THE CURIOSITY</li>
-                <li class="main__item">MAKE IT FISHEYE</li>
+                <li class="main__item">Deep earth</li>
+                <li class="main__item">Night arcade</li>
+                <li class="main__item">Soccer team vr</li>
+                <li class="main__item">The grid</li>
+                <li class="main__item">From up above vr</li>
+                <li class="main__item">Pocket borealis</li>
+                <li class="main__item">The curiosity</li>
+                <li class="main__item">Make it fisheye</li>
             </ul>
         </main>
         <footer class="footer">
