--- a/index.html
+++ b/index.html
@@ -10,18 +10,23 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="burger-menu">
-            <div class="nav">
-                <a class="mobile-menu__logo" href="#"></a>
-                <button class="bmbtn"></button>
+        <div class="header-mobile">
+            <div class="burger-menu">
+              <a class="logo burger__logo"></a>
+              <span class="bmbtn"></span>
             </div>
-            <ul class="nav__items">
-                <li class="mobile-menu__item"><a class="mobile-menu__link" href="#">About</a></li>
-                <li class="mobile-menu__item"><a class="mobile-menu__link" href="#">Careers</a></li>
-                <li class="mobile-menu__item"><a class="mobile-menu__link" href="#">Events</a></li>
-                <li class="mobile-menu__item"><a class="mobile-menu__link" href="#">Products</a></li>
-                <li class="mobile-menu__item"><a class="mobile-menu__link" href="#">Support</a></li>
-            </ul>
+            <nav class="nav">
+              <ul class="logo logo-in-burger">
+                  <a href="./index.html"><img src="./images/logo.png" alt=""/></a>
+              </ul>
+              <ul class="nav__items">
+                <li><a class="nav__link" href="#">About</a></li>
+                <li><a class="nav__link" href="#">Careers</a></li>
+                <li><a class="nav__link" href="#">Events</a></li>
+                <li><a class="nav__link" href="#">Products</a></li>
+                <li><a class="nav__link" href="#">Support</a></li>
+              </ul>
+            </nav>
         </div>
         <header class="header">
             <nav class="header__nav">
