refactor: rename vars for better readability

--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
               <span class="bmbtn "></span>
             </div>
             <nav class="nav">
-              <ul class="logo logo-in-burger">
-                  <a href="./index.html"><img src="./images/logo.png" alt=""/></a>
-              </ul>
+              <div class="logo logo-in-burger"></div>
               <ul class="nav__items">
                 <li><a class="nav__link" href="#">About</a></li>
                 <li><a class="nav__link" href="#">Careers</a></li>
